Premier Jet Back + connexion bdd

--- a/e-learning/index.html
+++ b/e-learning/index.html
@@ -13,33 +13,33 @@
         <div class="header0">
             <div class="logo">
                 <img src="images/logo.png"/>
-            </div>          
+            </div>
             <div class="nav">
                 <ul>
-                    <li><a href="#">Accueil</a></li>
-                    <li><a href="#">l'école</a></li>
-                    <li><a href="#">Métiers</a></li>
-                    <li><a href="#">Alternance</a></li>
-                    <li><a href="#">Blog</a></li>
-                </ul>    
+                    <li><a href="">Accueil</a></li>
+                    <li><a href="">l'école</a></li>
+                    <li><a href="">Métiers</a></li>
+                    <li><a href="">Alternance</a></li>
+                    <li><a href="licorne">Blog</a></li>
+                </ul>
             </div>
         </div>
         <div>
             <div>
                 <h1>RECEVEZ UNE BROCHURE GRATUITE ET SANS ENGAGEMENT !</h1>
-                <h2>Quel domaine vous intéresse ?</h2>            
+                <h2>Quel domaine vous intéresse ?</h2>
                 <form method="post" action="traitement.php" class="recherche">
                     <p>
                         <label for="recherche"> rechercher:</label>
                         <input type="search" name="recherche" id="recherche" placeholder="Choisissez votre formation" size="30" maxlength="10">
                     </p>
-                </form> 
+                </form>
             </div>
             <div>
                 <a href="#">Espace élèves</a>
                 <a href="#">S'inscrire</a>
-            </div>    
-        </div>        
+            </div>
+        </div>
     </header>
 
     <section>
@@ -62,7 +62,7 @@
         <div>
             <img src="images/avis.png" alt="">
             <p>Ecole conforme au décret qualité et référencée par DataDock</p>
-        </div>        
+        </div>
     </section>
 
     <section>
@@ -82,9 +82,9 @@
     <section>
         <div>
             <h3>Le XXX vous présente ses coachs pédagogiques</h3>
-            <p>La force du XXX c'est notre équipe pédagogique! 
-                Dans cette vidéo, découvrez Lilli, Estelle et Thibault. 
-                Ils ont accepté de répondre à nos questions pour que vous puissiez les découvrir autrement que dans leur rôle de coach. 
+            <p>La force du XXX c'est notre équipe pédagogique!
+                Dans cette vidéo, découvrez Lilli, Estelle et Thibault.
+                Ils ont accepté de répondre à nos questions pour que vous puissiez les découvrir autrement que dans leur rôle de coach.
                 Pour vous, ils se sont livrés sur leur travail, la vie au XXX et nous partagent leurs inspirations au quotidien.</p>
         </div>
         <div>
@@ -97,7 +97,7 @@
         <div>
             <h3>Utiliser son CPF pour financer sa formation</h3>
             <p>Le CPF permet à toute personne, salariée ou demandeur d’emploi, de suivre la formation de leur choix.
-                Au Centre Européen de Formation, les formations diplômantes et les Titres RNCP sont éligibles au CPF 
+                Au Centre Européen de Formation, les formations diplômantes et les Titres RNCP sont éligibles au CPF
                 (CAP AEPE, CAP Cuisine, CAP Coiffure, CAP Esthétique Cosmétique parfumerie, ADVF et Secrétaire Médicale)</p>
         </div>
     </section>
@@ -127,7 +127,7 @@
             <div>
                 <img src="images/tel.png" alt="">
                 <p>0000000000</p>
-            </div>            
+            </div>
         </div>
 
         <div>
@@ -143,19 +143,19 @@
                 <div>
                     <p>Établissement privé soumis au contrôle de l’Etat, immatriculé sous le numéro UAI 0596978 P.
                         Organisme de formation professionnelle continue, déclarée sous le numéro 31 59 08328 59
-                        Le Centre Européen de Formation possède la certification QUALIOPI pour ses activités FPC 
+                        Le Centre Européen de Formation possède la certification QUALIOPI pour ses activités FPC
                         et est référencé sur DataDock sous le numéro 0008886.</p>
                     <div>
-                        <img img src="images/qualiopiwhite.png" alt=""> 
-                        <img img src="images/datadockewhite.png" alt=""> 
-                    </div>                  
+                        <img img src="images/qualiopiwhite.png" alt="">
+                        <img img src="images/datadockewhite.png" alt="">
+                    </div>
                 </div>
             </div>
             <div>
                 <p>Vous êtes un professionnel ?
                     (indépendant, entreprise association ...)
                     Découvrez notre espace dédié.</p>
-                <a href="#"><img img src="images/espaceperso.png" alt=""></a> 
+                <a href="#"><img img src="images/espaceperso.png" alt=""></a>
             </div>
     </footer>
 </body>
