--- a/e-learning/html/connexion.html
+++ b/e-learning/html/connexion.html
@@ -43,20 +43,16 @@
 
     <section class="login-page">
         <div class="form">
-            <form class="register-form">
-              <input type="text" placeholder="name"/>
-              <input type="password" placeholder="password"/>
-              <input type="text" placeholder="email address"/>
-              <button>create</button>
-              <p class="message">Already registered? <a href="#">Sign In</a></p>
-            </form>
-            <form class="login-form">
-              <input type="text" placeholder="username"/>
-              <input type="password" placeholder="password"/>
-              <button>login</button>
-              <p class="message">Not registered? <a href="#">Create an account</a></p>
-            </form>
-          </div> 
+            <fieldset>
+                  <form class="login-form">
+                    <input type="text" placeholder="identifiant"/>
+                    <input type="password" placeholder="mot de passe"/>
+                    <button>connexion</button>
+                    <p class="message">Vous n'êtes pas encore inscrit? <a href="#">Créez votre compte</a></p>
+                </form>
+            </fieldset> 
+          </div>
+        
     </section>
 
     <footer>
