--- a/e-learning/html/inscription.html
+++ b/e-learning/html/inscription.html
@@ -50,15 +50,15 @@
                 <table>
                     <tr>
                         <td><label>Nom</label></td>
-                        <td><input type="text" placeholder="saisir votre nom"/> </td>
+                        <td><input type="text" placeholder="saisissez votre nom"/> </td>
                     </tr>
                     <tr>
                         <td><label>Prenom</label></td>
-                        <td><input type="text" placeholder="saisir votre prenom"/></td>
+                        <td><input type="text" placeholder="saisissez votre prenom"/></td>
                     </tr>
                     <tr>
                         <td><label>Email</label></td>
-                        <td><input type="email" placeholder="saisir votre Email"/></td>
+                        <td><input type="email" placeholder="saisissez votre email"/></td>
                     </tr>
                     <tr>
                         <td><label>Mot de passe</label></td>
@@ -66,7 +66,7 @@
                     </tr>
                     <tr>
                         <td><label>Confirmer mot de passe</label></td>
-                        <td><input type="password" placeholder="confirmer votre mot de passe"/></td>
+                        <td><input type="password" placeholder="confirmez votre mot de passe"/></td>
                     </tr>
                     <tr>
                         <td>Sexe</td>
