--- a/e-learning/html/index.html
+++ b/e-learning/html/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="header0">
             <div class="logo">
-                <img src="images/logo.png"/>
+                <img src="../images/logo.png"/>
             </div>
             <div class="nav">
                 <ul>
@@ -43,23 +43,23 @@
 
     <section>
         <div>
-            <img src="images/datadocke.jpg" alt="">
+            <img src="../images/datadocke.jpg" alt="">
             <p>Ecole conforme au décret qualité et référencée par DataDock</p>
         </div>
         <div>
-            <img src="images/qualiopi.png" alt="">
+            <img src="../images/qualiopi.png" alt="">
             <p>Ecole certifiée Qualiopi pour la qualité de ses formations</p>
         </div>
         <div>
-            <img src="images/opqf.png" alt="">
+            <img src="../images/opqf.png" alt="">
             <p>Ecole privée certifiée OPQF pour ses activités FPC</p>
         </div>
         <div>
-            <img src="images/cpf2.png" alt="">
+            <img src="../images/cpf2.png" alt="">
             <p>Formation finançable avec votre CPF*</p>
         </div>
         <div>
-            <img src="images/avis.png" alt="">
+            <img src="../images/avis.png" alt="">
             <p>Ecole conforme au décret qualité et référencée par DataDock</p>
         </div>
     </section>
@@ -92,7 +92,7 @@
     </section>
 
     <section>
-        <img src="images/etudiante.jpg" alt="">
+        <img src="../images/etudiante.jpg" alt="">
         <div>
             <h3>Utiliser son CPF pour financer sa formation</h3>
             <p>Le CPF permet à toute personne, salariée ou demandeur d’emploi, de suivre la formation de leur choix.
@@ -107,24 +107,24 @@
         <div>
             <div>
                 <div>
-                    <a href="#"><img src="images/fb.png" alt=""></a>
+                    <a href="#"><img src="../images/fb.png" alt=""></a>
                     <p>Facebook</p>
                 </div>
                 <div>
-                    <a href="#"><img src="images/twitter.png" alt=""></a>
+                    <a href="#"><img src="../images/twitter.png" alt=""></a>
                     <p>Twitter</p>
                 </div>
                 <div>
-                    <a href="#"><img src="images/youtube.png" alt=""></a>
+                    <a href="#"><img src="../images/youtube.png" alt=""></a>
                     <p>youtube</p>
                 </div>
                 <div>
-                    <a href="#"><img src="images/instagram.png" alt=""></a>
+                    <a href="#"><img src="../images/instagram.png" alt=""></a>
                     <p>Instagram</p>
                 </div>
             </div>
             <div>
-                <img src="images/tel.png" alt="">
+                <img src="../images/tel.png" alt="">
                 <p>0000000000</p>
             </div>
         </div>
@@ -145,8 +145,8 @@
                         Le Centre Européen de Formation possède la certification QUALIOPI pour ses activités FPC
                         et est référencé sur DataDock sous le numéro 0008886.</p>
                     <div>
-                        <img img src="images/qualiopiwhite.png" alt="">
-                        <img img src="images/datadockewhite.png" alt="">
+                        <img img src="../images/qualiopiwhite.png" alt="">
+                        <img img src="../images/datadockewhite.png" alt="">
                     </div>
                 </div>
             </div>
@@ -154,7 +154,7 @@
                 <p>Vous êtes un professionnel ?
                     (indépendant, entreprise association ...)
                     Découvrez notre espace dédié.</p>
-                <a href="#"><img img src="images/espaceperso.png" alt=""></a>
+                <a href="#"><img img src="../images/espaceperso.png" alt=""></a>
             </div>
     </footer>
 </body>
