--- a/e-learning/html/inscription.html
+++ b/e-learning/html/inscription.html
@@ -11,7 +11,7 @@
     <header>
         <div class="header0">
             <div class="logo">
-                <img src="images/logo.png"/>
+                <img src="../images/logo.png"/>
             </div>          
             <div class="nav">
                 <ul>
@@ -105,24 +105,24 @@
         <div>
             <div>
                 <div>
-                    <a href="#"><img src="images/fb.png" alt=""></a>
+                    <a href="#"><img src="../images/fb.png" alt=""></a>
                     <p>Facebook</p>
                 </div>
                 <div>
-                    <a href="#"><img src="images/twitter.png" alt=""></a>
+                    <a href="#"><img src="../images/twitter.png" alt=""></a>
                     <p>Twitter</p>
                 </div>
                 <div>
-                    <a href="#"><img src="images/youtube.png" alt=""></a>
+                    <a href="#"><img src="../images/youtube.png" alt=""></a>
                     <p>youtube</p>
                 </div>
                 <div>
-                    <a href="#"><img src="images/instagram.png" alt=""></a>
+                    <a href="#"><img src="../images/instagram.png" alt=""></a>
                     <p>Instagram</p>
                 </div>
             </div>
             <div>
-                <img src="images/tel.png" alt="">
+                <img src="../images/tel.png" alt="">
                 <p>0000000000</p>
             </div>            
         </div>
@@ -143,8 +143,8 @@
                         Le Centre Européen de Formation possède la certification QUALIOPI pour ses activités FPC 
                         et est référencé sur DataDock sous le numéro 0008886.</p>
                     <div>
-                        <img img src="images/qualiopiwhite.png" alt=""> 
-                        <img img src="images/datadockewhite.png" alt=""> 
+                        <img img src="../images/qualiopiwhite.png" alt=""> 
+                        <img img src="../images/datadockewhite.png" alt=""> 
                     </div>                  
                 </div>
             </div>
@@ -152,7 +152,7 @@
                 <p>Vous êtes un professionnel ?
                     (indépendant, entreprise association ...)
                     Découvrez notre espace dédié.</p>
-                <a href="#"><img img src="images/espaceperso.png" alt=""></a> 
+                <a href="#"><img img src="../images/espaceperso.png" alt=""></a> 
             </div>
     </footer>
 </body>
