--- a/e-learning/html/cours.html
+++ b/e-learning/html/cours.html
@@ -41,6 +41,10 @@
         </div>        
     </header>
 
+    <section>
+        
+    </section>
+
   
 
     <footer>
@@ -98,3 +102,4 @@
             </div>
     </footer>
 </body>
+</html>
