--- a/e-learning/html/inscription.html
+++ b/e-learning/html/inscription.html
@@ -50,29 +50,29 @@
                 <table>
                     <tr>
                         <td><label>Nom</label></td>
-                        <td><input type="text" placeholder="saisissez votre nom"/> </td>
+                        <td><input type="text" placeholder="saisissez votre nom" required/> </td>
                     </tr>
                     <tr>
                         <td><label>Prenom</label></td>
-                        <td><input type="text" placeholder="saisissez votre prenom"/></td>
+                        <td><input type="text" placeholder="saisissez votre prenom" required/></td>
                     </tr>
                     <tr>
                         <td><label>Email</label></td>
-                        <td><input type="email" placeholder="saisissez votre email"/></td>
+                        <td><input type="email" placeholder="saisissez votre email" required/></td>
                     </tr>
                     <tr>
                         <td><label>Mot de passe</label></td>
-                        <td><input type="password" placeholder="entrez votre mot de passe"/></td>
+                        <td><input type="password" placeholder="entrez votre mot de passe" required/></td>
                     </tr>
                     <tr>
                         <td><label>Confirmer mot de passe</label></td>
-                        <td><input type="password" placeholder="confirmez votre mot de passe"/></td>
+                        <td><input type="password" placeholder="confirmez votre mot de passe" required/></td>
                     </tr>
                     <tr>
                         <td>Sexe</td>
                         <td>
-                            Masculin <input type="radio" name="sexe" value="M" checked="checked">
-                            Féminin <input type="radio" name="sexe" value="F">
+                            Homme <input type="radio" name="sexe" value="M" checked="checked">
+                            Femme <input type="radio" name="sexe" value="F">
                         </td>
                     </tr>
                     <tr>
@@ -156,3 +156,4 @@
             </div>
     </footer>
 </body>
+</html>
