--- a/e-learning/html/parametres.html
+++ b/e-learning/html/parametres.html
@@ -41,7 +41,81 @@
         </div>        
     </header>
 
-  
+    <section>
+        <form>
+            <fieldset>
+                <legend>Votre email</legend>
+
+                <table>
+                    <tr>
+                        <td><label>Adresse email actuelle</label></td>
+                        <td><input type="email" placeholder="saisissez votre email"/> </td>
+                    </tr>
+                    <tr>
+                        <td><label>Nouvel email</label></td>
+                        <td><input type="email" placeholder="saisissez votre nouvel email" /></td>
+                    </tr>
+                                       
+                </table>
+                <button>Envoyer</button>
+            </fieldset>
+        </form>
+    </section>
+
+    <section>
+        <form>
+            <fieldset>
+                <legend>Votre langue</legend>
+                <table>
+                    <tr>
+                        <td><label>Choisissez votre langue</label></td>
+                        <td>
+                            <select>
+                                <option>Français</option>
+                                <option>Anglais</option>
+                                <option>Espagnol</option>
+                                <option>Allemand</option>
+                                <option>Chinois</option>
+                                <option>Japonnais</option>
+                            </select>
+                        </td>
+                    </tr>
+                </table>
+                <button>Envoyer</button> 
+            </fieldset>
+        </form>
+    </section>
+
+    <section>
+        <form>
+            <fieldset>
+                <legend>Changer votre mot de passe</legend>
+
+                <table>
+                    <tr>
+                        <td><label>Ancien mot de passe</label></td>
+                        <td><input type="password" placeholder="saisissez votre mot de passe"/> </td>
+                    </tr>
+                    <tr>
+                        <td><label>Nouveau mot de passe</label></td>
+                        <td><input type="password" placeholder="saisissez votre nouveau mot de passe"/></td>
+                    </tr>
+                    <tr>
+                        <td><label>Confirmez mot de passe</label></td>
+                        <td><input type="password" placeholder="confirmez votre mot de passe"/></td>
+                    </tr>                   
+                </table>
+                <button>Envoyer</button>
+            </fieldset>
+        </form>
+    </section>
+
+    <section>
+        <fieldset>
+            <legend>Supprimez votre compte</legend>
+            <a href="#">Je veux supprimer mon compte</a>
+        </fieldset>
+    </section>
 
     <footer>
         <div>
@@ -98,3 +172,4 @@
             </div>
     </footer>
 </body>
+</html>
