--- a/e-learning/html/inscription.html
+++ b/e-learning/html/inscription.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <!-- <link rel="stylesheet" type="text/css" href="../css/style.css"> -->
     <title>inscription</title>
 </head>
 
@@ -12,7 +12,7 @@
         <div class="header0">
             <div class="logo">
                 <img src="../images/logo.png"/>
-            </div>          
+            </div>
             <div class="nav">
                 <ul>
                     <li><a href="#">Accueil</a></li>
@@ -20,29 +20,29 @@
                     <li><a href="#">Métiers</a></li>
                     <li><a href="#">Alternance</a></li>
                     <li><a href="#">Blog</a></li>
-                </ul>    
+                </ul>
             </div>
         </div>
         <div>
             <div>
                 <h1>RECEVEZ UNE BROCHURE GRATUITE ET SANS ENGAGEMENT !</h1>
-                <h2>Quel domaine vous intéresse ?</h2>            
+                <h2>Quel domaine vous intéresse ?</h2>
                 <form method="post" action="traitement.php" class="recherche">
                     <p>
                         <label for="recherche"> rechercher:</label>
                         <input type="search" name="recherche" id="recherche" placeholder="Choisissez votre formation" size="30" maxlength="10">
                     </p>
-                </form> 
+                </form>
             </div>
             <div>
                 <a href="#">Espace élèves</a>
                 <a href="#">S'inscrire</a>
-            </div>    
-        </div>        
+            </div>
+        </div>
     </header>
 
     <section>
-        <form>
+        <form id='signInForm'>
 
             <fieldset>
                 <legend>Formulaire d'inscription</legend>
@@ -94,7 +94,7 @@
                     </tr>
 
                     <tr>
-                        <td colspan="2"><input type="submit" value="inscription"/>  <input type="reset" value="Annuler"/></td>
+                        <td colspan="2"><input type="submit" value="inscription" id='submitSignIn'>  <input type="reset" value="Annuler"/></td>
                     </tr>
                 </table>
             </fieldset>
@@ -124,7 +124,7 @@
             <div>
                 <img src="../images/tel.png" alt="">
                 <p>0000000000</p>
-            </div>            
+            </div>
         </div>
 
         <div>
@@ -140,20 +140,21 @@
                 <div>
                     <p>Établissement privé soumis au contrôle de l’Etat, immatriculé sous le numéro UAI 0596978 P.
                         Organisme de formation professionnelle continue, déclarée sous le numéro 31 59 08328 59
-                        Le Centre Européen de Formation possède la certification QUALIOPI pour ses activités FPC 
+                        Le Centre Européen de Formation possède la certification QUALIOPI pour ses activités FPC
                         et est référencé sur DataDock sous le numéro 0008886.</p>
                     <div>
-                        <img img src="../images/qualiopiwhite.png" alt=""> 
-                        <img img src="../images/datadockewhite.png" alt=""> 
-                    </div>                  
+                        <img img src="../images/qualiopiwhite.png" alt="">
+                        <img img src="../images/datadockewhite.png" alt="">
+                    </div>
                 </div>
             </div>
             <div>
                 <p>Vous êtes un professionnel ?
                     (indépendant, entreprise association ...)
                     Découvrez notre espace dédié.</p>
-                <a href="#"><img img src="../images/espaceperso.png" alt=""></a> 
+                <a href="#"><img img src="../images/espaceperso.png" alt=""></a>
             </div>
     </footer>
 </body>
+<script src="../Js/requeteLogin.js"></script>
 </html>
