Début des requêtes Fetch: enregistrement des utilisateurs

--- a/e-learning/html/inscription.html
+++ b/e-learning/html/inscription.html
@@ -42,7 +42,7 @@
     </header>
 
     <section>
-        <form id='signInForm'>
+        <form id='signInForm' name='signInForm'>
 
             <fieldset>
                 <legend>Formulaire d'inscription</legend>
@@ -65,8 +65,8 @@
                         <td><input type="password" placeholder="entrez votre mot de passe" required/></td>
                     </tr>
                     <tr>
-                        <td><label>Confirmer mot de passe</label></td>
-                        <td><input type="password" placeholder="confirmez votre mot de passe" required/></td>
+                        <td><label for="password">Confirmer mot de passe</label></td>
+                        <td><input type="password" name="password" placeholder="confirmez votre mot de passe" required/></td>
                     </tr>
                     <tr>
                         <td>Sexe</td>
