Test des routes

--- a/e-learning/html/index.html
+++ b/e-learning/html/index.html
@@ -36,7 +36,7 @@
             </div>
             <div>
                 <a href="#">Espace élèves</a>
-                <a href="#">S'inscrire</a>
+                <a href="/e-learning/html/inscription.html">S'inscrire</a>
             </div>
         </div>
     </header>
