--- a/e-learning/html/inscription.html
+++ b/e-learning/html/inscription.html
@@ -94,7 +94,7 @@
                     </tr>
 
                     <tr>
-                        <td colspan="2"><input type="submit" value="inscription" id='submitSignIn'>  <input type="reset" value="Annuler"/></td>
+                        <td colspan="2"><input type="submit" value="inscription" id='submitSignIn'>  <a href="/e-learning/html/index.html">Annuler</a></td>
                     </tr>
                 </table>
             </fieldset>
@@ -156,5 +156,5 @@
             </div>
     </footer>
 </body>
-<script src="../Js/requeteLogin.js"></script>
+<script src="../Js/requeteSignIn.js"></script>
 </html>
