--- a/e-learning/html/inscription.html
+++ b/e-learning/html/inscription.html
@@ -4,42 +4,51 @@
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" 
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <title>inscription</title>
 </head>
 
-<body>
-    <header>
-        <div class="header0">
-            <div class="logo">
+<body id="basic-setup">
+    <header class="big-banner">
+        <div id="header0" class="container-fluid ">
+            <div class="logo d-inline p-2">
                 <img src="../images/logo.png"/>
-            </div>          
-            <div class="nav">
-                <ul>
-                    <li><a href="#">Accueil</a></li>
-                    <li><a href="#">l'école</a></li>
-                    <li><a href="#">Métiers</a></li>
-                    <li><a href="#">Alternance</a></li>
-                    <li><a href="#">Blog</a></li>
-                </ul>    
+            </div>
+            <div >
+                <ul id="nav" class="nav row">
+                    <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="#">Accueil</a></li>
+                    <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="#">l'école</a></li>
+                    <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="#">Métiers</a></li>
+                    <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="#">Alternance</a></li>
+                    <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="#">Blog</a></li>
+                </ul>
             </div>
         </div>
-        <div>
-            <div>
-                <h1>RECEVEZ UNE BROCHURE GRATUITE ET SANS ENGAGEMENT !</h1>
-                <h2>Quel domaine vous intéresse ?</h2>            
+        <div id="textheader">
+            <div >
+                <h1 id="brochure" class="text-white font-weight-normal">RECEVEZ UNE BROCHURE GRATUITE ET SANS ENGAGEMENT !</h1>
+                <h2 id="queldomaine" class="text-white font-weight-normal">Quel domaine vous intéresse ?</h2>
                 <form method="post" action="traitement.php" class="recherche">
                     <p>
-                        <label for="recherche"> rechercher:</label>
+                        <label for="recherche" class="text-white font-weight-normal"> rechercher:</label>
                         <input type="search" name="recherche" id="recherche" placeholder="Choisissez votre formation" size="30" maxlength="10">
                     </p>
-                </form> 
+                </form>
             </div>
-            <div>
-                <a href="#">Espace élèves</a>
-                <a href="#">S'inscrire</a>
-            </div>    
-        </div>        
+            <div id="espaceinscrit">
+                <a class="eleves text-white font-weight-bold float-md-right" href="#">Espace élèves</a>
+                <a class="inscrit text-danger font-weight-bold float-md-right" href="#">S'inscrire</a>
+            </div>
+        </div>
     </header>
+
 
     <section>
         <form>
@@ -101,59 +110,43 @@
         </form>
     </section>
 
-    <footer>
-        <div>
-            <div>
-                <div>
+    <footer class="footer">
+        <div id="footer1">
+            <div id="footer2">
+                <div class="f1">
                     <a href="#"><img src="../images/fb.png" alt=""></a>
                     <p>Facebook</p>
                 </div>
-                <div>
+                <div class="f1">
                     <a href="#"><img src="../images/twitter.png" alt=""></a>
                     <p>Twitter</p>
                 </div>
-                <div>
+                <div class="f1">
                     <a href="#"><img src="../images/youtube.png" alt=""></a>
                     <p>youtube</p>
                 </div>
-                <div>
+                <div class="f1">
                     <a href="#"><img src="../images/instagram.png" alt=""></a>
                     <p>Instagram</p>
                 </div>
+                <div class="f1">
+                    <img src="../images/tel.png" alt="">
+                    <p>06 22 97 67 67</p>
+                </div>
             </div>
-            <div>
-                <img src="../images/tel.png" alt="">
-                <p>0000000000</p>
-            </div>            
         </div>
 
         <div>
-            <div>
-                <a>Contactez-nous</a>
-                <a>Mentions légales</a>
-                <a>Protection des données personnelles</a>
-                <a>Plan du site</a>
-                <a>Recrutement</a>
-                <a>Les avis sur Votre Formation</a>
+            <div class="reference">
+                <a href="#">Contactez-nous</a>
+                <a href="#">Mentions légales</a>
+                <a href="#">Protection des données personnelles</a>
+                <a href="#">Plan du site</a>
+                <a href="#">Recrutement</a>
+                <a href="#">Les avis sur Votre Formation</a>
             </div>
-            <div>
-                <div>
-                    <p>Établissement privé soumis au contrôle de l’Etat, immatriculé sous le numéro UAI 0596978 P.
-                        Organisme de formation professionnelle continue, déclarée sous le numéro 31 59 08328 59
-                        Le Centre Européen de Formation possède la certification QUALIOPI pour ses activités FPC 
-                        et est référencé sur DataDock sous le numéro 0008886.</p>
-                    <div>
-                        <img img src="../images/qualiopiwhite.png" alt=""> 
-                        <img img src="../images/datadockewhite.png" alt=""> 
-                    </div>                  
-                </div>
-            </div>
-            <div>
-                <p>Vous êtes un professionnel ?
-                    (indépendant, entreprise association ...)
-                    Découvrez notre espace dédié.</p>
-                <a href="#"><img img src="../images/espaceperso.png" alt=""></a> 
-            </div>
+            
+        </div>
     </footer>
 </body>
 </html>
