--- a/e-learning/html/index.html
+++ b/e-learning/html/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <!-- <link rel="stylesheet" type="text/css" href="../css/style.css"> -->
     <title>index</title>
 </head>
 
@@ -19,7 +19,7 @@
                     <li><a href="">l'école</a></li>
                     <li><a href="">Métiers</a></li>
                     <li><a href="">Alternance</a></li>
-                    <li><a href="licorne">Blog</a></li>
+                    <li><a href="">Blog</a></li>
                 </ul>
             </div>
         </div>
@@ -35,7 +35,7 @@
                 </form>
             </div>
             <div>
-                <a href="#">Espace élèves</a>
+                <a href="" id="userProfile">Espace élèves</a>
                 <a href="/e-learning/html/inscription.html">S'inscrire</a>
             </div>
         </div>
@@ -87,7 +87,7 @@
                 Pour vous, ils se sont livrés sur leur travail, la vie au XXX et nous partagent leurs inspirations au quotidien.</p>
         </div>
         <div>
-            <video src="exemple.mp4" width=320  height=240 controls poster="vignette.jpg"></video>
+            <!-- <video src="exemple.mp4" width=320  height=240 controls poster="vignette.jpg"></video> -->
         </div>
     </section>
 
@@ -124,7 +124,7 @@
                 </div>
             </div>
             <div>
-                <img src="../images/tel.png" alt="">
+                <!-- <img src="../images/tel.png" alt=""> -->
                 <p>0000000000</p>
             </div>
         </div>
@@ -158,4 +158,5 @@
             </div>
     </footer>
 </body>
+<script src="../Js/userProfile.mjs"></script>
 </html>
