--- a/e-learning/html/inscription.html
+++ b/e-learning/html/inscription.html
@@ -15,8 +15,8 @@
             </div>
             <div class="nav">
                 <ul>
-                    <li><a href="#">Accueil</a></li>
-                    <li><a href="#">l'école</a></li>
+                    <li><a href="/e-learning/html/index.html">Accueil</a></li>
+                    <li><a href="">l'école</a></li>
                     <li><a href="#">Métiers</a></li>
                     <li><a href="#">Alternance</a></li>
                     <li><a href="#">Blog</a></li>
@@ -50,23 +50,23 @@
                 <table>
                     <tr>
                         <td><label>Nom</label></td>
-                        <td><input type="text" placeholder="saisissez votre nom" required/> </td>
+                        <td><input type="text" placeholder="saisissez votre nom"/> </td>
                     </tr>
                     <tr>
                         <td><label>Prenom</label></td>
-                        <td><input type="text" placeholder="saisissez votre prenom" required/></td>
+                        <td><input type="text" placeholder="saisissez votre prenom"/></td>
                     </tr>
                     <tr>
                         <td><label>Email</label></td>
-                        <td><input type="email" placeholder="saisissez votre email" required/></td>
+                        <td><input type="email" placeholder="saisissez votre email"/></td>
                     </tr>
                     <tr>
                         <td><label>Mot de passe</label></td>
-                        <td><input type="password" placeholder="entrez votre mot de passe" required/></td>
+                        <td><input type="password" placeholder="entrez votre mot de passe"/></td>
                     </tr>
                     <tr>
                         <td><label for="password">Confirmer mot de passe</label></td>
-                        <td><input type="password" name="password" placeholder="confirmez votre mot de passe" required/></td>
+                        <td><input type="password" name="password" placeholder="confirmez votre mot de passe"/></td>
                     </tr>
                     <tr>
                         <td>Sexe</td>
@@ -94,7 +94,7 @@
                     </tr>
 
                     <tr>
-                        <td colspan="2"><input type="submit" value="inscription" id='submitSignIn'>  <a href="/e-learning/html/index.html">Annuler</a></td>
+                        <td colspan="2"><input type="submit" value="inscription" id='submitSignIn'>  <a href="/e-learning/html/index.html">Retour à l'accueil</a></td>
                     </tr>
                 </table>
             </fieldset>
@@ -156,5 +156,5 @@
             </div>
     </footer>
 </body>
-<script src="../Js/requeteSignIn.js"></script>
+<script src="../Js/requeteSignIn.mjs"></script>
 </html>
