--- a/e-learning/html/index.html
+++ b/e-learning/html/index.html
@@ -96,10 +96,10 @@
         <div class="item"><a href="#" class="myButton">Je demande une documentation</a></div>
     </div>
     
-    <section id="middle0" class="container-fluid row">
+    <section id="middle0" class="container row">
         <div class="explication1 col-lg-6 ">
             <h3 class="titreformation">Votre Formation vous présente ses coachs pédagogiques</h3>
-            <p class=" ">La force de Votre Formation c'est notre équipe pédagogique!
+            <p  id="paragraphe1" >La force de Votre Formation c'est notre équipe pédagogique!
                 Dans cette vidéo, découvrez Lilli, Estelle et Thibault.
                 Ils ont accepté de répondre à nos questions pour que vous puissiez les découvrir autrement que dans leur rôle de coach.
                 Pour vous, ils se sont livrés sur leur travail, la vie au Ma Formation et nous partagent leurs inspirations au quotidien.</p>
@@ -167,7 +167,7 @@
             </div>
 
         </div>
-        <div>
+        <div id="paragraphe2">
             <h3>Utiliser son CPF pour financer sa formation</h3>
             <p>Le CPF permet à toute personne, salariée ou demandeur d’emploi, de suivre la formation de leur choix.
                 Au Centre Européen de Formation, les formations diplômantes et les Titres RNCP sont éligibles au CPF
