--- a/e-learning/html/inscription.html
+++ b/e-learning/html/inscription.html
@@ -50,7 +50,7 @@
     </header>
 
 
-    <section>
+    <section id="forminscrit" class="container">
         <form id='signInForm' name='signInForm'>
 
             <fieldset>
