--- a/e-learning/html/parametres.html
+++ b/e-learning/html/parametres.html
@@ -50,12 +50,12 @@
     </header>
 
 
-    <section>
-        <form>
+    <section id="formparametres0" >
+        <form id="formparametres00">
             <fieldset>
                 <legend>Votre email</legend>
 
-                <table>
+                <table id="table0">
                     <tr>
                         <td><label>Adresse email actuelle</label></td>
                         <td><input type="email" placeholder="saisissez votre email"/> </td>
@@ -73,12 +73,12 @@
 
     
 
-    <section>
-        <form>
+    <section id="formparametres1" >
+        <form id="formparametres11">
             <fieldset>
                 <legend>Changer votre mot de passe</legend>
 
-                <table>
+                <table id="table1">
                     <tr>
                         <td><label>Ancien mot de passe</label></td>
                         <td><input type="password" placeholder="saisissez votre mot de passe"/> </td>
@@ -97,7 +97,7 @@
         </form>
     </section>
 
-    <section>
+    <section id="suppcompte" class="contnaire">
         <fieldset>
             <legend>Supprimez votre compte</legend>
             <a href="#">Je veux supprimer mon compte</a>
