profil et autres

--- a/e-learning/html/cours.html
+++ b/e-learning/html/cours.html
@@ -49,6 +49,12 @@
         </div>
     </header>
 
+    <section>
+        <div>
+            
+        </div>
+    </section>
+
 
     <footer class="footer">
         <div id="footer1">
