--- a/e-learning/html/parametres.html
+++ b/e-learning/html/parametres.html
@@ -97,7 +97,7 @@
         </form>
     </section>
 
-    <section id="suppcompte" class="contnaire">
+    <section id="suppcompte" class="container">
         <fieldset>
             <legend>Supprimez votre compte</legend>
             <a href="#">Je veux supprimer mon compte</a>
