--- a/e-learning/html/profil.html
+++ b/e-learning/html/profil.html
@@ -50,6 +50,22 @@
         </div>
     </header>
 
+    <section id="boutons" class="container row ">
+        <div class="col-lg-6"><a href="#" class="myButton1">Profil</a></div>
+        
+        <div  class="col-lg-6"><a href="#" class="myButton1">Paramètres</a></div>
+    </section>
+
+    <section id="profile0" class="container row ">
+        <img class="imgprofil" src="../images/profil.png" alt="">
+        <p>Nom & Prénom</p>
+    </section>
+
+    <section id="cours">
+        <a  href="#">Cours 1</a>
+    </section>
+
+
 
     <footer class="footer">
         <div id="footer1">
