Mise en place des requêtes(à finir)

--- a/e-learning/html/connexion.html
+++ b/e-learning/html/connexion.html
@@ -13,7 +13,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <title>connexion</title>
-    <script src="../Js/userProfile.mjs"></script>
+   
 </head>
 
 <body id="basic-setup">
@@ -24,8 +24,8 @@
             </div>
             <div >
                 <ul id="nav" class="nav row">
-                    <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="#">Accueil</a></li>
-                    <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="#">l'école</a></li>
+                    <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="./index.html">Accueil</a></li>
+                    <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="./cours.html">l'école</a></li>
                     <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="#">Métiers</a></li>
                     <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="#">Alternance</a></li>
                     <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="#">Blog</a></li>
@@ -44,8 +44,8 @@
                 </form>
             </div>
             <div id="espaceinscrit">
-                <a class="eleves text-white font-weight-bold float-md-right" href="#">Espace élèves</a>
-                <a class="inscrit text-danger font-weight-bold float-md-right" href="#">S'inscrire</a>
+                <a class="eleves text-white font-weight-bold float-md-right" id="userProfile" href="">Espace élèves</a>
+                <a class="inscrit text-danger font-weight-bold float-md-right" href="./inscription.html">S'inscrire</a>
             </div>
         </div>
     </header>
@@ -110,4 +110,5 @@
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 <script src="/e-learning/Js/requeteLogIn.mjs"></script>
+<script src="../Js/userProfile.mjs"></script>
 </html>
