--- a/e-learning/html/index.html
+++ b/e-learning/html/index.html
@@ -26,8 +26,8 @@
             </div>
             <div >
                 <ul id="nav" class="nav row">
-                    <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="#">Accueil</a></li>
-                    <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="#">l'école</a></li>
+                    <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="./index.html">Accueil</a></li>
+                    <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="./cours.html">l'école</a></li>
                     <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="#">Métiers</a></li>
                     <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="#">Alternance</a></li>
                     <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="#">Blog</a></li>
@@ -46,8 +46,8 @@
                 </form>
             </div>
             <div id="espaceinscrit">
-                <a class="eleves text-white font-weight-bold float-md-right" href="#">Espace élèves</a>
-                <a class="inscrit text-danger font-weight-bold float-md-right" href="#">S'inscrire</a>
+                <a class="eleves text-white font-weight-bold float-md-right" id="userProfile" href="">Espace élèves</a>
+                <a class="inscrit text-danger font-weight-bold float-md-right" href="./inscription.html">S'inscrire</a>
             </div>
         </div>
     </header>
@@ -79,14 +79,14 @@
         <h3 id="formez">Formez-vous facilement à votre futur métier !</h3>
         <div id="formations" class="container-fluid" >
             <div class=" for1 row">
-                <a class="enfance col-lg-2" href="#" title="Allez vers la page" target="_blank">Petite Enfance</a>
-                <a class="animaliers col-lg-2" href="#" title="Allez vers la page" target="_blank">Mertiers Animaliers</a>
-                <a class="deco col-lg-2" href="#" title="Allez vers la page" target="_blank">Décoration</a>
+                <a class="enfance col-lg-2" href="./cours1ch1.html#Petite_enfance" title="Allez vers la page"  id="enfance">Petite Enfance</a>
+                <a class="animaliers col-lg-2" href="./cours1ch1.html#Metiers_animaliers" title="Allez vers la page" id="animaux" >Mertiers Animaliers</a>
+                <a class="deco col-lg-2" href="./cours1ch1.html#Deco" title="Allez vers la page" >Décoration</a>
             </div>
             <div  class="for2 row">
-                <a class="finance col-lg-2" href="#" title="Allez vers la page" target="_blank">Administration & Finance</a>
-                <a class="dev col-lg-2" href="#" title="Allez vers la page" target="_blank">Développement web</a>
-                <a class="social col-lg-2" href="#" title="Allez vers la page" target="_blank">Santé & Social</a>
+                <a class="finance col-lg-2" href="./cours1ch1.html#Administration" title="Allez vers la page" >Administration & Finance</a>
+                <a class="dev col-lg-2" href="./cours1ch1.html#Design" title="Allez vers la page" >Développement web</a>
+                <a class="social col-lg-2" href="./cours1ch1.html#Sante" title="Allez vers la page">Santé & Social</a>
             </div>
         </div>
 
