--- a/e-learning/html/inscription.html
+++ b/e-learning/html/inscription.html
@@ -23,8 +23,8 @@
             </div>
             <div >
                 <ul id="nav" class="nav row">
-                    <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="#">Accueil</a></li>
-                    <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="#">l'école</a></li>
+                    <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="./index.html">Accueil</a></li>
+                    <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="./cours.html">l'école</a></li>
                     <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="#">Métiers</a></li>
                     <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="#">Alternance</a></li>
                     <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="#">Blog</a></li>
@@ -43,8 +43,8 @@
                 </form>
             </div>
             <div id="espaceinscrit">
-                <a class="eleves text-white font-weight-bold float-md-right" href="#">Espace élèves</a>
-                <a class="inscrit text-danger font-weight-bold float-md-right" href="#">S'inscrire</a>
+                <a class="eleves text-white font-weight-bold float-md-right" id='userProfile' href="">Espace élèves</a>
+                <a class="inscrit text-danger font-weight-bold float-md-right" href="./inscription.html">S'inscrire</a>
             </div>
         </div>
     </header>
@@ -133,4 +133,5 @@
     </footer>
 </body>
 <script src="../Js/requeteSignIn.mjs"></script>
+<script  src="../Js/userProfile.mjs"></script>
 </html>
