--- a/e-learning/html/cours1ch1.html
+++ b/e-learning/html/cours1ch1.html
@@ -23,8 +23,8 @@
             </div>
             <div >
                 <ul id="nav" class="nav row">
-                    <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="#">Accueil</a></li>
-                    <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="#">l'école</a></li>
+                    <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="./index.html">Accueil</a></li>
+                    <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="./cours.html">l'école</a></li>
                     <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="#">Métiers</a></li>
                     <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="#">Alternance</a></li>
                     <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="#">Blog</a></li>
@@ -49,7 +49,9 @@
         </div>
     </header>
 
+    <section id="main-section">
 
+    </section>
     <footer class="footer">
         <div id="footer1">
             <div id="footer2">
@@ -89,4 +91,5 @@
         </div>
     </footer>
 </body>
+<script type="module" src="../Js/types.mjs"></script>
 </html>
