--- a/e-learning/html/profil.html
+++ b/e-learning/html/profil.html
@@ -24,8 +24,8 @@
             </div>
             <div >
                 <ul id="nav" class="nav row">
-                    <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="#">Accueil</a></li>
-                    <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="#">l'école</a></li>
+                    <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="./index.html">Accueil</a></li>
+                    <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="./cours.html">l'école</a></li>
                     <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="#">Métiers</a></li>
                     <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="#">Alternance</a></li>
                     <li class="nav-item"><a class="nav-link font-weight-bold col px-md-5 d-inline p-2" href="#">Blog</a></li>
@@ -44,8 +44,8 @@
                 </form>
             </div>
             <div id="espaceinscrit">
-                <a class="eleves text-white font-weight-bold float-md-right" href="#">Espace élèves</a>
-                <a class="inscrit text-danger font-weight-bold float-md-right" href="#">S'inscrire</a>
+                <a class="eleves text-white font-weight-bold float-md-right" id='userProfile' href="">Espace élèves</a>
+                <a class="inscrit text-danger font-weight-bold float-md-right" href="./inscription.html">S'inscrire</a>
             </div>
         </div>
     </header>
@@ -90,4 +90,5 @@
         </div>
     </footer>
 </body>
+<script src="../Js/userProfile.mjs"></script>
 </html>
